--- a/index.html
+++ b/index.html
@@ -1,11 +1,36 @@
 <!DOCTYPE html>
 <html lang="ru">
+
   <head>
+
     <meta charset="utf-8">
     <title>WAP</title>
+
+    <style>
+      * {
+        margin: 0;
+        padding: 0;
+        outline: 0;
+        border: 0;
+      }
+      html,
+      body {
+        height: 100%;
+      }
+      body {
+        font-size: 14px;
+      }
+    </style>
+
   </head>
+
+
   <body>
+
     <div id="app"></div>
     <script src="/dist/build.js"></script>
+
   </body>
+
+
 </html>
