--- a/index.html
+++ b/index.html
@@ -7,18 +7,22 @@
     <title>WAP</title>
 
     <style>
+      /* Стили по умолчанию */
+
       * {
-        margin: 0;
-        padding: 0;
-        outline: 0;
-        border: 0;
+          margin: 0;
+          padding: 0;
+          outline: 0;
+          border: 0;
       }
+
       html,
       body {
-        height: 100%;
+          height: 100%;
       }
+
       body {
-        font-size: 14px;
+          font-size: 14px;
       }
     </style>
 
