--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <body>
 
     <div id="app"></div>
-    <script src="/dist/build.js"></script>
+    <script src="dist/build.js"></script>
 
   </body>
 
